<resources>
    <string name="app_name">Zyla</string>
    <string name="action_settings">Settings</string>
    <string name="score_reward">Score / Rewards</string>

    <!--Create task-->
    <string name="name_placeholder">Buying some food..</string>
    <string name="description_placeholder">Short description (optional)</string>
    <string name="create_button">ADD TASK</string>

    <string-array name="task_categories">
        <item>Select a category...</item>
        <item>Sport</item>
        <item>Grocery</item>
        <item>Study</item>
        <item>Cleaning</item>
    </string-array>

    <string-array name="famous_sport_citations">
        <item>"Quand j’ai arrêté de chercher des excuses, j’ai trouvé des résultats"</item>
        <item>"L’endurance est l’une des choses les plus difficiles. Mais ceux qui endurent finissent par gagner" - Bouddha</item>
        <item>"La motivation vous sert de départ. L'habitude vous fait continuer."  - Jim Ryun</item>
        <item>"Celui qui n'a pas d'objectifs ne risque pas de les atteindre."  - Sun Tzu</item>
        <item>"Se donner du mal pour les petites choses, c’est parvenir aux grandes avec le temps." - Samuel Beckett</item>
        <item>"Si tu abandonnes une fois, cela peut devenir une habitude. N’abandonne jamais."</item>
        <item>"Les gagnants trouvent des moyens, les perdants des excuses…" - F. D. Roosevelt</item>
        <item>"Une des clés du succès est la confiance en soi. Une des clés de la confiance en soi est la préparation." - Arthur Ashed</item>
        <item>"Le sport va chercher la peur pour la dominer, la fatigue pour en triompher, la difficulté pour la vaincre." - Pierre de Coubertin</item>
        <item>"En sport, dès qu’on s’arrête, on régresse."  - Marc Pajot</item>
        <item>"Le sport ne forge pas le caractère. Il le révèle." - Heywood Hale Broun</item>
        <item>"Le sport est dépassement de soi. Le sport est école de vie." - Aimé Jacquet </item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Connection-->
    <string name="co_email">Email</string>
    <string name="co_password">Mot de passe</string>
    <string name="co_sign_in">Se connecter</string>
    <string name="co_register_info">Vous n\'avez pas encore de compte?</string>
    <string name="co_register">S\'inscrire</string>
    <string name="co_forgot_pass">Mot de passe oublié?</string>

    <!--Register-->
    <string name="reg_info">Choisir le mode d\'inscription</string>
    <string name="reg_choice">Ou</string>
    <string name="reg_gender_man">Homme</string>
    <string name="reg_gender_woman">Femme</string>
    <string name="reg_age">Âge</string>
    <string name="reg_conf_password">Confirmer le mot de passe</string>
    <string name="reg_error_inscription">Une erreur est survenue lors de l\'inscription</string>

    <string name="title_activity_maps">Map</string>

</resources>


